[package]
name = "php-parser-rs"
description = "A handwritten recursive-descent parser for PHP written in Rust"
keywords = ["php", "php-parser", "parser", "php-parser-rs", "php-ast"]
repository = "https://github.com/ryangjchandler/php-parser-rs"
version = "0.0.0-b1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [ "Ryan Chandler <https://github.com/ryangjchandler>", "Contributors <https://github.com/ryangjchandler/php-parser-rs/graphs/contributors>"]

[lib]
doctest = false

[dev-dependencies]
pretty_assertions = "1.3.0"
