[package]
name = "php-parser-rs"
description = "A handwritten recursive-descent parser for PHP written in Rust"
keywords = ["php", "php-parser", "parser", "php-parser-rs", "php-ast"]
repository = "https://github.com/ryangjchandler/php-parser-rs"
version = "0.0.0-b1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [ "Ryan Chandler <https://github.com/ryangjchandler>", "Contributors <https://github.com/ryangjchandler/php-parser-rs/graphs/contributors>"]

[lib]
doctest = false

[dev-dependencies]
pretty_assertions = "1.3.0"

[[bin]]
name = "snapshot"
path = "bin/snapshot.rs"

[dependencies]
serde = { version = "1.0.149", features = ["derive"] }
serde_json = { version = "1.0.89" }

[profile.release]
opt-level = 3
debug = false
strip = 'symbols'
debug-assertions = false
overflow-checks = false
lto = 'fat'
panic = 'abort'
incremental = true
codegen-units = 1
rpath = true
