[package]
name = "php-parser-rs"
description = "A handwritten recursive-descent parser for PHP written in Rust"
keywords = ["php", "php-parser", "parser", "php-parser-rs", "php-ast"]
repository = "https://github.com/ryangjchandler/php-parser-rs"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [ "Ryan Chandler <https://github.com/ryangjchandler>", "Contributors <https://github.com/ryangjchandler/php-parser-rs/graphs/contributors>"]

[lib]
doctest = false

[dev-dependencies]
pretty_assertions = { version = "1.3.0" }

[[bin]]
name = "php-parser-snapshot"
path = "bin/snapshot.rs"

[[bin]]
name = "php-parser-schema"
path = "bin/schema.rs"

[dependencies]
ariadne = { version = "0.1.5" }
clap = { version = "4.0.32", features = ["derive"] }
schemars = { version = "0.8.11" }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = { version = "1.0.89" }

[profile.release]
opt-level = 3
debug = false
strip = 'symbols'
debug-assertions = false
overflow-checks = false
lto = 'fat'
panic = 'abort'
incremental = true
codegen-units = 1
rpath = true
