[package]
name = "trunk_interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cmder = "0.6.1"
hashbrown = "0.13.1"
trunk_lexer = { path = "../trunk_lexer" }
trunk_parser = { path = "../trunk_parser" }
