[package]
name = "trunk_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
trunk_lexer = { path = "../trunk_lexer" }

[lib]
doctest = false
